--- a/package.json
+++ b/package.json
@@ -1,16 +1,19 @@
 {
   "name": "nhl-schedule-ics",
-  "version": "1.0.0",
+  "version": "2024.08.14",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
-    "nhl"
+    "nhl",
+    "nhl-api",
+    "ics"
   ],
   "author": "Tim Cappalli",
-  "license": "ISC",
+  "license": "MIT",
   "description": "",
+  "repository": "github:timcappalli/nhl-schedule-ics",
   "dependencies": {
     "axios": "^1.7.4",
     "ics": "^3.7.6"
